@@ -55,6 +55,9 @@
 #安装需要使用的库
 yum install rpm-build gcc make gcc-c++ openssl-devel git ant python-devel -y
 
+执行JVM参数设置
+#export _JAVA_OPTIONS="-Xmx2048m -XX:MaxPermSize=512m -Djava.awt.headless=true"
+
 #也可以使用其他镜像
 $wget http://www.apache.org/dist/ambari/ambari-2.5.1/apache-ambari-2.5.1-src.tar.gz 
 $tar xfvz apache-ambari-2.5.1-src.tar.gz
